[gd_scene load_steps=10 format=2]

[ext_resource path="res://BaseLevel/BaseLevel.gd" type="Script" id=1]
[ext_resource path="res://InputOutput/InputOutput.tscn" type="PackedScene" id=2]
[ext_resource path="res://GenericGameScenes/ColoredFrames.tscn" type="PackedScene" id=3]
[ext_resource path="res://TitleScreen/FullScreen.tscn" type="PackedScene" id=4]
[ext_resource path="res://RunEnvironment/RunEnvironment.tscn" type="PackedScene" id=5]
[ext_resource path="res://GenericGameScenes/Inventory.tscn" type="PackedScene" id=6]
[ext_resource path="res://UsersGuide/UsersGuide.tscn" type="PackedScene" id=7]
[ext_resource path="res://GenericGameScenes/NextLevel.tscn" type="PackedScene" id=8]
[ext_resource path="res://GenericGameScenes/ResetLevel.tscn" type="PackedScene" id=9]

[node name="BaseLevel" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
pause_mode = 1
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0117647, 0.0745098, 0.2, 1 )

[node name="InputOutput" parent="." instance=ExtResource( 2 )]

[node name="ColoredFrames" parent="." instance=ExtResource( 3 )]

[node name="FullScreen" parent="." instance=ExtResource( 4 )]
pause_mode = 2

[node name="RunEnvironment" parent="." instance=ExtResource( 5 )]

[node name="Inventory" parent="." instance=ExtResource( 6 )]

[node name="UsersGuide" parent="." instance=ExtResource( 7 )]

[node name="NextLevel" parent="." instance=ExtResource( 8 )]

[node name="ResetLevel" parent="." instance=ExtResource( 9 )]
[connection signal="input_output_defined" from="." to="RunEnvironment" method="_on_input_output_defined"]
[connection signal="start_input_entered" from="InputOutput" to="Inventory" method="_on_InputOutput_start_input_entered"]
[connection signal="start_input_exited" from="InputOutput" to="Inventory" method="_on_InputOutput_start_input_exited"]
[connection signal="pressed" from="FullScreen" to="." method="_on_FullScreen_pressed"]
[connection signal="frame_flashy" from="RunEnvironment" to="ColoredFrames" method="_on_RunEnvironment_frame_flashy"]
[connection signal="level_succeded" from="RunEnvironment" to="ColoredFrames" method="_on_RunEnvironment_level_succeded"]
[connection signal="frame_flashy" from="UsersGuide" to="ColoredFrames" method="_on_UsersGuide_frame_flashy"]
[connection signal="hide_all" from="UsersGuide" to="ColoredFrames" method="_on_UsersGuide_hide_all"]
[connection signal="show_all" from="UsersGuide" to="ColoredFrames" method="_on_UsersGuide_show_all"]
[connection signal="stop_flashy" from="UsersGuide" to="ColoredFrames" method="_on_UsersGuide_stop_flashy"]
